--- a/package.json
+++ b/package.json
@@ -1,15 +1,27 @@
 {
-  "name": "instaToMealie",
+  "name": "social-media-to-mealie",
   "version": "1.0.50",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
-    "elysia": "latest"
+    "@elysiajs/html": "^1.2.0",
+    "@elysiajs/static": "^1.2.0",
+    "@ffmpeg-installer/ffmpeg": "1.1.0",
+    "@yolk-oss/elysia-env": "2.0.0",
+    "ai": "4.1.17",
+    "elysia": "1.2.12",
+    "fluent-ffmpeg": "2.1.3",
+    "openai": "4.83.0",
+    "puppeteer": "^24.2.0",
+    "snapsave-media-downloader": "2.1.1",
+    "whisper-node": "^1.1.1"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "@biomejs/biome": "1.9.4",
+    "@types/fluent-ffmpeg": "2.1.27",
+    "bun-types": "1.2.2"
   },
   "module": "src/index.js"
 }
